k8s/deployments/keycloak-simple/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
spec:
  selector:
    matchLabels:
      app: keycloak
  replicas: 1
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak-simple
        image: jboss/keycloak
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
