k8s/deployments/keycloak-simple/keycloak-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
spec:
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: keycloak
  type: NodePort
  #type: LoadBalancer
  sessionAffinity: None
  #sessionAffinity: ClientIP
