k8s/deployments/keycloak-simple/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: keycloak-app.com
      http:
        paths:
        - backend:
            serviceName: keycloak
            servicePort: 8080
